footer contrast fixes for headers and leads

--- a/docroot/themes/custom/uids_base/scss/components/footer.scss
+++ b/docroot/themes/custom/uids_base/scss/components/footer.scss
@@ -3,6 +3,15 @@
 $imgpath: '../../../../../uids/assets/images/';
 @import "components/branding/footer/footer.scss";
 
+.footer {
+  h2, h3, h4, h5, h6 {
+    color: $white;
+  }
+  .lead {
+    color: $white;
+  }
+}
+
 .uiowa-footer--login-link {
   a {
     &:before {
